-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
None
-
5280e866f76e38f2bf1c226ff896b4649194eec4
Building Qt from git configured with "-no-qml-debug" gives:
/build/qt5/qtdeclarative/src/qml/debugger/qqmldebugserver.cpp:342:13: error: ‘void cleanup()’ defined but not used [-Werror=unused-function]
static void cleanup()
^
cc1plus: all warnings being treated as errors
cleanup() seems to be used in line 403 of that file in a section guarded by #ifndef QT_QML_NO_DEBUGGER.
Guarding the definition of cleanup() in the same way solve this build issue.
| For Gerrit Dashboard: QTBUG-42394 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 98961,2 | Mark cleanup function as unused if compiled with QT_QML_NO_DEBUGGER | 5.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |